# platform.core.multimedia.libmm-player

./: AUTHORS  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  license  mm-player.pc.in  mm-playerclient.pc.in
TC/: tet_scen
TC/utc/: Makefile  tslist  utc_mm_player_activate_section_repeat_func.c  utc_mm_player_activate_section_repeat_func.h  utc_mm_player_common.c  utc_mm_player_common.h  utc_mm_player_create_func.c  utc_mm_player_create_func.h  utc_mm_player_deactivate_section_repeat_func.c  utc_mm_player_deactivate_section_repeat_func.h  utc_mm_player_destroy_func.c  utc_mm_player_destroy_func.h  utc_mm_player_get_attribute_func.c  utc_mm_player_get_attribute_func.h  utc_mm_player_get_attribute_info_func.c  utc_mm_player_get_attribute_info_func.h  utc_mm_player_get_mute_func.c  utc_mm_player_get_mute_func.h  utc_mm_player_get_position_func.c  utc_mm_player_get_position_func.h  utc_mm_player_get_state_func.c  utc_mm_player_get_state_func.h  utc_mm_player_get_subtitle_silent_func.c  utc_mm_player_get_subtitle_silent_func.h  utc_mm_player_get_volume_func.c  utc_mm_player_get_volume_func.h  utc_mm_player_pause_func.c  utc_mm_player_pause_func.h  utc_mm_player_realize_func.c  utc_mm_player_realize_func.h  utc_mm_player_resume_func.c  utc_mm_player_resume_func.h  utc_mm_player_set_attribute_func.c  utc_mm_player_set_attribute_func.h  utc_mm_player_set_audio_stream_callback_func.c  utc_mm_player_set_audio_stream_callback_func.h  utc_mm_player_set_message_callback_func.c  utc_mm_player_set_message_callback_func.h  utc_mm_player_set_mute_func.c  utc_mm_player_set_mute_func.h  (+12 more)
TC/utc/test_data/: legend.sub
config/: Makefile.am  Makefile.in  mmfw_player.ini
debian/: changelog  control  libmm-player-dev.install.in  libmm-player-internal-dev.install.in  libmm-player.install.in  rules
packaging/: libmm-player.changes  libmm-player.spec
src/: Makefile.am  Makefile.in  mm_player.c  mm_player_ahs.c  mm_player_ahs_hls.c  mm_player_asm.c  mm_player_attrs.c  mm_player_audioeffect.c  mm_player_capture.c  mm_player_common_priv.c  mm_player_es.c  mm_player_ini.c  mm_player_m3u8.c  mm_player_pd.c  mm_player_priv.c  mm_player_priv_gst.c  mm_player_priv_gst_wrapper.c  mm_player_priv_internal.c  mm_player_resource.c  mm_player_sndeffect.c  mm_player_sound_focus.c  mm_player_streaming.c  mm_player_tracks.c  mm_player_utils.c
src/client/: mm_player_client.c
src/include/: mm_player.h  mm_player_ahs.h  mm_player_ahs_hls.h  mm_player_asm.h  mm_player_attrs.h  mm_player_audioeffect.h  mm_player_capture.h  mm_player_es.h  mm_player_ini.h  mm_player_internal.h  mm_player_m3u8.h  mm_player_mused.h  mm_player_pd.h  mm_player_priv.h  mm_player_priv_internal.h  mm_player_priv_locl_func.h  mm_player_resource.h  mm_player_sndeffect.h  mm_player_sound_focus.h  mm_player_streaming.h  mm_player_tracks.h  mm_player_utils.h
src/mused/: mm_player_mused.c
src/server/: mm_player.c  mm_player_audioeffect.c  mm_player_capture.c  mm_player_es.c  mm_player_pd.c  mm_player_priv.c  mm_player_resource.c  mm_player_sound_focus.c  mm_player_streaming.c  mm_player_tracks.c  mm_player_utils.c
test/: Makefile.am  Makefile.in  mm_player_testsuite.c
